--- a/app/src/main/res/layout/client_file_item.xml
+++ b/app/src/main/res/layout/client_file_item.xml
@@ -1,43 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp">
+    android:gravity="bottom"
+    android:layout_marginBottom="4dp"
+    android:orientation="horizontal">
+
 
     <ImageView
         android:id="@+id/avatar_imv"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/ic_user"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:scaleType="fitXY"
-        />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="-8dp"
+        android:layout_marginRight="-2dp"
+        android:layout_marginEnd="-8dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_user" />
 
-    <TextView
-        android:id="@+id/message_content"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/avatar_imv"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:layout_marginEnd="50dp"
-        android:gravity="start"
-        android:clickable="true"
-        android:layout_alignBottom="@id/avatar_imv"
-        android:layout_marginBottom="8dp"
-        android:textColor="@color/white"
-        android:background="@drawable/chat_item_background"
-        />
+        android:layout_marginRight="50dp"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/sender_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginBottom="2dp"
+            android:gravity="bottom"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            android:visibility="visible"
+            />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/file_message_container"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:background="@drawable/chat_item_background">
 
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@drawable/ic_file_present"
-        android:layout_alignStart="@id/message_content"
-        android:layout_alignTop="@id/message_content"
-        android:layout_alignBottom="@id/message_content"
-        android:scaleType="center"
-        />
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/ic_attach_file"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_file_present" />
+            <TextView
+                android:id="@+id/message_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/chat_item_background"
+                android:clickable="true"
+                android:gravity="start"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/white" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
