--- a/app/src/main/res/layout/server_file_item.xml
+++ b/app/src/main/res/layout/server_file_item.xml
@@ -1,41 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp">
+    android:gravity="bottom|end"
+    android:layout_marginBottom="4dp"
+    android:orientation="horizontal">
+
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:gravity="bottom|end"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/sender_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
+            android:visibility="gone"
+            android:textColor="@color/black"
+            />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/chat_item_background"
+            android:gravity="end|center_vertical">
+
+            <TextView
+                android:id="@+id/message_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:clickable="true"
+                android:gravity="end"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:id="@+id/ic_attach_file"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_file_present" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <ImageView
         android:id="@+id/avatar_imv"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_server_user" />
-
-    <TextView
-        android:id="@+id/message_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/avatar_imv"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_toStartOf="@id/avatar_imv"
-        android:background="@drawable/chat_item_background"
-        android:gravity="end"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:clickable="true"
-        android:textColor="@color/white" />
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@drawable/ic_file_present"
-        android:layout_alignEnd="@id/message_content"
-        android:layout_alignTop="@id/message_content"
-        android:layout_alignBottom="@id/message_content"
-        android:scaleType="center"
-        />
-</RelativeLayout>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="-8dp"
+        android:layout_marginLeft="-8dp"
+        android:layout_marginStart="-8dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_user" />
+</androidx.appcompat.widget.LinearLayoutCompat>
